Fix bug for user profile pictures not showing up on review index for business show page

--- a/app/assets/stylesheets/business/review.scss
+++ b/app/assets/stylesheets/business/review.scss
@@ -28,6 +28,10 @@
   border-radius: 4px;
 }
 
+.review-author-picture img{
+  height: 100%;
+}
+
 .review-author-info{
 
 }
